# skel-llvm

./: .gitignore  CMakeLists.txt  compile.sh  install_llvm.sh  readme.md
pass/: CMakeLists.txt  envparser.hpp  pass.cpp
tests/: CMakeLists.txt  function.c  runtime.c  syscall.c
